Fixed alignment in live all mobile

--- a/Content/CustomCss/Site.css
+++ b/Content/CustomCss/Site.css
@@ -468,6 +468,14 @@ input:-ms-input-placeholder {
 }
 }
 
+@media only screen and (min-width:360px)
+{
+    .img-live-all-xs
+    {
+        min-height:265px;
+    }
+}
+
 
 
 
